<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ONYX</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_empty_title">No downloads yet</string>
    <string name="downloads_empty_subtitle">Your downloaded movies and episodes will appear here</string>
    <string name="loading_error_title">An error occurred</string>
    <string name="loading_error_retry">Retry</string>
    <string name="loading_error_clear_cache">Clear Cache</string>
    <string name="loading_error_details">Error Details</string>
    <string name="update_title">New Update Available</string>
    <string name="update_message">A new version of the app is available!</string>
    <string name="update_current_version_label">Current version</string>
    <string name="update_new_version_label">New version</string>
    <string name="update_release_notes">Release notes</string>
    <string name="update_later">Maybe Later</string>
    <string name="update">Update</string>
    <string name="settings_update_check">Automatic update check</string>
    <string name="settings_update_check_summary">Check for new versions of the app automatically</string>
    <string name="app_layout">App layout</string>
    <string name="app_layout_auto">Auto</string>
    <string name="app_layout_mobile">Mobile layout</string>
    <string name="app_layout_tv">TV layout</string>
    <string name="app_layout_apply">Apply</string>
    <string name="providers_all_languages">All languages</string>
    <string name="providers_favorites">★ Favorites</string>
    <string name="providers_choose_title">Choose a provider</string>
    <string name="main_menu_change_provider">Change provider</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_movies">Movies</string>
    <string name="main_menu_tv_shows">TV Shows</string>
    <string name="main_menu_all_channels">All Channels</string>
    <string name="main_menu_series">VOSTFR</string>
    <string name="main_menu_series_fr">VF</string>
    <string name="main_menu_films">Film</string>
    <string name="main_menu_series_tab">Série</string>
    <string name="main_menu_favorites">Favorites</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_theme_change">Change Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_nero_amoled_oled">Nero Amoled/Oled</string>
    <string name="theme_sunset_cinema">Sunset Cinema</string>
    <string name="theme_steel_blue">Steel Blue</string>
    <string name="theme_forest_night">Forest Night</string>
    <string name="theme_crimson_noir">Crimson Noir</string>
    <string name="theme_midnight_violet">Midnight Violet</string>
    <string name="theme_nord_frost">Nord Frost</string>
    <string name="theme_emerald_luxe">Emerald Luxe</string>
    <string name="theme_retro_neon">Retro Neon</string>
    <string name="search_input_hint">Search movies, TV shows</string>
    <string name="search_input_hint_iptv">Search channels</string>
    <string name="search_no_results">Aucun résultat trouvé</string>
    <string name="global_search">Global search</string>
    <string name="global_search_films">Global search movies &amp; TV shows</string>
    <string name="global_search_anime">Global search anime</string>
    <string name="searching">Searching...</string>
    <string name="search_empty_query">Please enter a search term</string>
    <string name="search_error">Error</string>
    <string name="search_history_title">Recherches récentes</string>
    <string name="search_history_clear">Effacer tout</string>
    <string name="search_history_cleared">Historique effacé</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="switching_to_provider">Switching to %s</string>
    <string name="home_swiper_watch_now">Watch Now</string>
    <string name="home_continue_watching">Continue Watching</string>
    <string name="home_favorite_movies">Favorite movies</string>
    <string name="home_favorite_tv_shows">Favorite TV shows</string>
    <string name="option_episode_open_tv_show">Go to TV show</string>
    <string name="option_show_favorite">Add to favorites</string>
    <string name="option_show_unfavorite">Remove from favorites</string>
    <string name="option_download">Download</string>
    <string name="option_show_watched">Mark as watched</string>
    <string name="option_show_mark_all_previous_watched">Mark as watched until here</string>
    <string name="option_show_mark_all_previous_unwatched">Mark as unwatched until here</string>
    <string name="option_show_unwatched">Mark as unwatched</string>
    <string name="option_clear_program">Remove from Continue Watching</string>
    <string name="option_cancel">Cancel</string>
    <string name="episode_item_info" formatted="false">S%d E%d • %s</string>
    <string name="episode_item_info_episode_only" formatted="false">E%d • %s</string>
    <string name="tv_show_item_episode_number">E%d</string>
    <string name="tv_show_item_season_number_episode_number" formatted="false">S%d E%d</string>
    <string name="tv_show_item_type">TV</string>
    <string name="tv_show_runtime_hours_minutes" formatted="false">%d h %d min</string>
    <string name="tv_show_runtime_minutes">%d min</string>
    <string name="tv_show_watch_season_episode" formatted="false">Watch S%d E%d</string>
    <string name="tv_show_watch_episode">Watch E%d</string>
    <string name="tv_show_trailer">Trailer</string>
    <string name="tv_show_seasons">Seasons</string>
    <string name="tv_show_cast">Cast</string>
    <string name="tv_show_directors">Director</string>
    <string name="tv_show_you_may_also_like">You may also like</string>
    <string name="movie_item_type">Movie</string>
    <string name="movie_runtime_hours_minutes" formatted="false">%d h %d min</string>
    <string name="movie_runtime_minutes">%d min</string>
    <string name="movie_watch_now">Watch Now</string>
    <string name="movie_trailer">Trailer</string>
    <string name="movie_synopsis_label">Synopsis</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_directors">Director</string>
    <string name="movie_you_may_also_like">You may also like</string>
    <string name="season_number">Season %d</string>
    <string name="episode_number">Episode %d</string>
    <string name="people_birthday">Birthday</string>
    <string name="people_deathday">Day of death</string>
    <string name="people_birthplace">Place of birth</string>
    <string name="people_biography">Biography</string>
    <string name="settings_about">About</string>
    <string name="settings_help">Help</string>
    <string name="settings_telegram">Telegram group</string>
    <string name="settings_category_streamingcommunity">StreamingCommunity settings</string>
    <string name="settings_category_streamingcommunity_domain">StreamingCommunity domain name</string>
    <string name="settings_category_cuevana">Cuevana 3 settings</string>
    <string name="settings_category_cuevana_domain">Cuevana 3 domain name</string>
    <string name="settings_category_poseidon">Poseidonhd2 settings</string>
    <string name="settings_category_poseidon_domain">Poseidonhd2 domain name</string>
    <string name="settings_category_network_title">Connection &amp; Services</string>
    <string name="settings_scan_resolver_qr_title">Scan TV bypass QR</string>
    <string name="settings_scan_resolver_qr_summary">Open the camera and scan the QR code shown on TV</string>
    <string name="settings_category_provider_title">Provider settings</string>
    <string name="settings_category_provider_url">Main URL</string>
    <string name="settings_category_provider_update_url">Portal URL</string>
    <string name="settings_autoupdate">Refresh main URL on startup</string>
    <string name="settings_autoupdate_on">On</string>
    <string name="settings_autoupdate_off">Off</string>
    <string name="settings_autoupdate_now">Refresh main URL now</string>
    <string name="settings_autoplay">Autoplay next episode</string>
    <string name="settings_autoplay_on">On</string>
    <string name="settings_autoplay_off">Off</string>
    <string name="settings_autoplay_buffer_title">Autoplay buffer</string>
    <string name="settings_autoplay_buffer_dialog_message">Set how many seconds before the end of the episode to switch to the next one.</string>
    <string name="autoplay_settings">Autoplay settings</string>
    <string name="player_settings">Player settings</string>
    <string name="settings_player_gestures">Player gestures</string>
    <string name="settings_player_gestures_on">On</string>
    <string name="settings_player_gestures_off">Off</string>
    <string name="settings_keep_screen_on_when_paused">Keep screen on when paused</string>
    <string name="settings_keep_screen_on_when_paused_summary">Prevents the screen from turning off when a video is paused</string>
    <string name="miscelaneous_title">Miscellaneous</string>
    <string name="settings_trailer_player_title">Trailer Player</string>
    <string name="settings_trailer_player_summary">Choose your preferred player for trailers</string>
    <string name="settings_trailer_player_reset">Reset SmartTube version choice</string>
    <string name="settings_trailer_player_reset_summary">Forces the app to ask again which SmartTube version (Stable/Beta) to use.</string>
    <string name="backup_category_title">Backup and Restore</string>
    <string name="backup_export_title">Export user data</string>
    <string name="backup_export_summary">Save your data (favorites, watch history) to a file.</string>
    <string name="backup_import_title">Import user data</string>
    <string name="backup_import_summary">Restore your data from a backup file.</string>
    <string name="settings_frenchstream_use_new_interface">Use the new FrenchStream interface</string>
    <string name="settings_frenchstream_use_new_interface_on">On</string>
    <string name="settings_frenchstream_use_new_interface_off">Off</string>
    <string name="settings_server_voe_category">VOE server settings</string>
    <string name="settings_server_voe_title">Disable server auto subtitles</string>
    <string name="settings_server_voe_summary">If enabled, subtitles from VOE, Vidnest and Vidzy servers will not be active by default even if they are available and have a default true value</string>
    <string name="settings_immersive_mode">Immersive Mode</string>
    <string name="settings_immersive_mode_summary">Hide status and navigation bars</string>
    <string name="settings_immersive_mode_on">On (Bars hidden)</string>
    <string name="settings_immersive_mode_off">Off (Bars visible)</string>
    <string name="player_settings_extra_buffer_title">Server with Extra Buffering</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_theme_title">App Theme</string>
    <string name="settings_category_tmdb">TMDb Settings</string>
    <string name="settings_tmdb_api_key">Custom TMDb API Key</string>
    <string name="settings_tmdb_api_key_summary">Leave empty to use the default API key provided with the app</string>
    <string name="settings_category_subdl">SubDL Settings</string>
    <string name="settings_subdl_api_key">SubDL API Key</string>
    <string name="settings_subdl_api_key_summary">Enter your personal SubDL API key to enable SubDL in the player\'s subtitle settings</string>
    <string name="settings_enable_tmdb_summary">Enable or disable TMDb usage</string>
    <string name="settings_enable_tmdb_title">Enable TMDb</string>
    <string name="settings_force_extra_buffer_title">Global Extra Buffering</string>
    <string name="settings_force_extra_buffer_summary">Enable extra buffering for all servers by default</string>
</resources>